apps/vagrant/download-deluge/deploy/web-statefulSet-resources.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: deluge-web
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: deluge-web
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 128Mi
